<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/phoneTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/phoneET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/adressTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adress"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/adressET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/villeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ville"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/villeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/villes"
        />

    <Button
        android:id="@+id/sendBn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/envoyer" />
</LinearLayout>